--- a/PROJECT 1/01_Data_Preparation.ipynb
+++ b/PROJECT 1/01_Data_Preparation.ipynb
@@ -1,17 +1,24 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#install specific version of libraries used in  lab"
+    "### Data Collection and Preparation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#install specific version of libraries used in lab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +213,7 @@
        "4  [{'WhPerMile': 400, 'kWhRequested': 16.0, 'mil...  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +387,7 @@
        "66449                                                NaN  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +422,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +538,7 @@
        "max    15291.000000    108.797242      2.000000  19923.000000"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +873,7 @@
        "max                                                   NaN  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
