--- a/AA_Project.ipynb
+++ b/AA_Project.ipynb
@@ -7,11 +7,11 @@
    "source": [
     "## Data Collection & Preparation\n",
     "\n",
-    "* Pandas for managing the data\n",
-    "* NumPy for math operations\n",
-    "* Sklearn for Machine Learning\n",
-    "* Seaborn for advanced visualization\n",
-    "* Matplotlib for additional plottingtinging"
+    "* ``Pandas`` for managing the data\n",
+    "* ``NumPy`` for math operations\n",
+    "* ``Sklearn`` for Machine Learning\n",
+    "* ``Seaborn`` for advanced visualization\n",
+    "* ``Matplotlib`` for additional plotting"
    ]
   },
   {
