--- a/PROJECT 1/01_Data_Preparation.ipynb
+++ b/PROJECT 1/01_Data_Preparation.ipynb
@@ -17,7 +17,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Data Collection and Preparation\n",
+    "For this task we will be using the following libraries:\n",
+    "\n",
+    "Pandas for managing the data\n",
+    "NumPy for math operations\n",
+    "Sklearn for ML\n",
+    "Seaborn for visialization\n",
+    "Matplotlib for additional plotting"
+   ]
   },
   {
    "cell_type": "code",
@@ -1710,24 +1719,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>kWhDelivered</th>\n",
+       "      <th>siteID</th>\n",
+       "      <th>userID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>66450.000000</td>\n",
+       "      <td>66450.000000</td>\n",
+       "      <td>66450.000000</td>\n",
+       "      <td>49187.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>4726.102062</td>\n",
+       "      <td>11.787916</td>\n",
+       "      <td>1.472656</td>\n",
+       "      <td>1800.494582</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3568.025394</td>\n",
+       "      <td>10.314789</td>\n",
+       "      <td>0.499256</td>\n",
+       "      <td>2617.548614</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.501000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1845.000000</td>\n",
+       "      <td>5.097000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>431.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>3960.000000</td>\n",
+       "      <td>9.140000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>818.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>7027.000000</td>\n",
+       "      <td>14.183000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1805.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>15291.000000</td>\n",
+       "      <td>108.797242</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>19923.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Unnamed: 0  kWhDelivered        siteID        userID\n",
+       "count  66450.000000  66450.000000  66450.000000  49187.000000\n",
+       "mean    4726.102062     11.787916      1.472656   1800.494582\n",
+       "std     3568.025394     10.314789      0.499256   2617.548614\n",
+       "min        0.000000      0.501000      1.000000      1.000000\n",
+       "25%     1845.000000      5.097000      1.000000    431.000000\n",
+       "50%     3960.000000      9.140000      1.000000    818.000000\n",
+       "75%     7027.000000     14.183000      2.000000   1805.000000\n",
+       "max    15291.000000    108.797242      2.000000  19923.000000"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    66450.000000\n",
+       "mean        11.787916\n",
+       "std         10.314789\n",
+       "min          0.501000\n",
+       "25%          5.097000\n",
+       "50%          9.140000\n",
+       "75%         14.183000\n",
+       "max        108.797242\n",
+       "Name: kWhDelivered, dtype: float64"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()[\"kWhDelivered\"]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'data' must be pandas DataFrame object, not: <class 'pandas.core.series.Series'>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\sterl\\Documents\\GitHub\\AA_Project\\PROJECT 1\\01_Data_Preparation.ipynb Cell 24\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/sterl/Documents/GitHub/AA_Project/PROJECT%201/01_Data_Preparation.ipynb#X33sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m sns\u001b[39m.\u001b[39;49mpairplot(df[\u001b[39m\"\u001b[39;49m\u001b[39mkWhDelivered\u001b[39;49m\u001b[39m\"\u001b[39;49m])\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/sterl/Documents/GitHub/AA_Project/PROJECT%201/01_Data_Preparation.ipynb#X33sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m plt\u001b[39m.\u001b[39mshow()\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\seaborn\\axisgrid.py:2103\u001b[0m, in \u001b[0;36mpairplot\u001b[1;34m(data, hue, hue_order, palette, vars, x_vars, y_vars, kind, diag_kind, markers, height, aspect, corner, dropna, plot_kws, diag_kws, grid_kws, size)\u001b[0m\n\u001b[0;32m   2100\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(msg, \u001b[39mUserWarning\u001b[39;00m)\n\u001b[0;32m   2102\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(data, pd\u001b[39m.\u001b[39mDataFrame):\n\u001b[1;32m-> 2103\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\n\u001b[0;32m   2104\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m'\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m'\u001b[39m\u001b[39m must be pandas DataFrame object, not: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mtype\u001b[39m(data)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m   2106\u001b[0m plot_kws \u001b[39m=\u001b[39m {} \u001b[39mif\u001b[39;00m plot_kws \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39melse\u001b[39;00m plot_kws\u001b[39m.\u001b[39mcopy()\n\u001b[0;32m   2107\u001b[0m diag_kws \u001b[39m=\u001b[39m {} \u001b[39mif\u001b[39;00m diag_kws \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39melse\u001b[39;00m diag_kws\u001b[39m.\u001b[39mcopy()\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'data' must be pandas DataFrame object, not: <class 'pandas.core.series.Series'>"
+     ]
+    }
+   ],
+   "source": [
+    "sns.pairplot(df[\"kWhDelivered\"])\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
