--- a/02_Descriptive_Analysis_testing.ipynb
+++ b/02_Descriptive_Analysis_testing.ipynb
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "0e478fe1-6450-4c26-8c87-447f0eef849f",
    "metadata": {
     "tags": []
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "db7ba4e8-b14b-4bea-a2e1-88ba1c6e9bf9",
    "metadata": {
     "tags": []
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "3f04622c-dc5b-476f-8f9e-7af5dff7dab6",
    "metadata": {
     "tags": []
@@ -1141,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "762436ee-9517-4161-b609-29feeb22fe0b",
    "metadata": {
     "tags": []
@@ -1434,7 +1434,7 @@
        "[46008 rows x 13 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1446,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "fed85f3c-b0f9-4038-a4b3-4ab2d59ec013",
    "metadata": {
     "tags": []
@@ -1458,7 +1458,7 @@
        "20442"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1478,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "8206ffbf-d48c-4d9a-b471-c7a7b323d8b5",
    "metadata": {
     "tags": []
@@ -1490,7 +1490,7 @@
        "4088"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1509,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "e89c14a4-33b9-4e77-a94b-3bc66741f61d",
    "metadata": {
     "tags": []
@@ -1802,7 +1802,7 @@
        "[4088 rows x 13 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1825,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "61f29e29-99ba-4fc8-b107-eb875b237b89",
    "metadata": {
     "tags": []
@@ -1838,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "847c9476-8245-4428-8098-73e5a558faeb",
    "metadata": {
     "tags": []
@@ -1885,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "d71db97e-4e85-48d0-a0d0-7d8f05c9bb16",
    "metadata": {
     "tags": []
@@ -1898,7 +1898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "6986d6a8-8aee-401a-b960-7c140209c71f",
    "metadata": {
     "tags": []
@@ -1937,7 +1937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "id": "7b274488-1012-4f8c-b71c-5ff34125357e",
    "metadata": {
     "tags": []
@@ -2230,22 +2230,22 @@
        "[33004 rows x 13 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Regarding 2(c):\n",
-    "#To understand which of the two sites is public and which is private, \n",
-    "#we start by first selecting all rows by their siteID, starting with siteID==1\n",
+    "# Regarding 2(c):\n",
+    "# To understand which of the two sites is public and which is private, \n",
+    "# we start by first selecting all rows by their siteID, starting with siteID==1\n",
     "\n",
     "cs_test.loc[cs_test['siteID']==1,:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "id": "84171c7f-1dd4-480d-b9d8-038167669f9e",
    "metadata": {
     "tags": []
@@ -2538,35 +2538,35 @@
        "[29358 rows x 13 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Now we select all rows with siteID==2\n",
+    "# Now we select all rows with siteID==2\n",
     "\n",
     "cs_test.loc[cs_test['siteID']==2,:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "id": "86a1b0a8-6210-4519-a651-76562661430f",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "#We can see that there are 33004 data entries for the first site and 29358 entries for the second site.\n",
-    "#Next up, we can temporarily split the data set in two parts to ease our upcoming work.\n",
-    "#To do this, we first define two indices to help us drop the rows by the value of siteID.\n",
+    "# We can see that there are 33004 data entries for the first site and 29358 entries for the second site.\n",
+    "# Next up, we can temporarily split the data set in two parts to ease our upcoming work.\n",
+    "# To do this, we first define two indices to help us drop the rows by the value of siteID.\n",
     "\n",
     "index_site1 = cs_test[cs_test['siteID']==1].index\n",
     "index_site2 = cs_test[cs_test['siteID']==2].index\n",
     "\n",
-    "#Now that we have our indices defined, we can drop the rows to split our data set. \n",
-    "#Note that we use the correct indices so that we drop all rows where siteID==2 for our first set.\n",
+    "# Now that we have our indices defined, we can drop the rows to split our data set. \n",
+    "# Note that we use the correct indices so that we drop all rows where siteID==2 for our first set.\n",
     "\n",
     "cs_test_s1 = cs_test.drop(index_site2)\n",
     "cs_test_s2 = cs_test.drop(index_site1)\n"
@@ -2574,7 +2574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "id": "b0983508-c916-4f09-bfa1-d4e5a588228f",
    "metadata": {
     "tags": []
@@ -2586,13 +2586,13 @@
        "(33004, 13)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#We can now verify that the previous step worked as intended. Note the number of data entries for each set.\n",
+    "# We can now verify that the previous step worked as intended. Note the number of data entries for each set.\n",
     "\n",
     "cs_test_s1.shape\n",
     "#cs_test_s2.shape"
@@ -2600,7 +2600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 19,
    "id": "12a33ba9-2bbb-4513-a38f-f575ba0930cf",
    "metadata": {
     "tags": []
@@ -2625,24 +2625,24 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#We can determine key differences between the two data sets that will help us understand\n",
-    "#which of the two sites is privately owned and which one is public.\n",
+    "# We can determine key differences between the two data sets that will help us understand\n",
+    "# which of the two sites is privately owned and which one is public.\n",
     "\n",
-    "#Let's start off by looking at how many registered users we have in each data set. \n",
-    "#We do this by checking the sum of null values for both sets.\n",
+    "# Let's start off by looking at how many registered users we have in each data set. \n",
+    "# We do this by checking the sum of null values for both sets.\n",
     "\n",
     "cs_test_s1.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 20,
    "id": "928745bf-ae83-4bdb-9294-29163d974d09",
    "metadata": {
     "tags": []
@@ -2667,15 +2667,15 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#We can see that there are 1481 unregistered users in our first data set, which contains a total of 33004 entries.\n",
-    "#Therefore, the share of registered users in set 1 is roughly 95,5%. \n",
-    "#Now, let's do the same for our second set.\n",
+    "# We can see that there are 1481 unregistered users in our first data set, which contains a total of 33004 entries.\n",
+    "# Therefore, the share of registered users in set 1 is roughly 95,5%. \n",
+    "# Now, let's do the same for our second set.\n",
     "\n",
     "cs_test_s2.isnull().sum()"
    ]
@@ -2687,25 +2687,148 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#In our second set (with a total of 29358 data entries), there are 14873 entries with missing userIDs. \n",
-    "#Therefore, the share of registered users in this set is roughly 49,3%.\n",
+    "# In our second set (with a total of 29358 data entries), there are 14873 entries with missing userIDs. \n",
+    "# Therefore, the share of registered users in this set is roughly 49,3%.\n",
     "\n",
-    "#We can obvserve a significant difference in share of registered users for both data sets, \n",
-    "#and thus for the two charging sites (Site 1: 95,5%, Site 2: 49,3%).\n",
+    "# We can obvserve a significant difference in share of registered users for both data sets, \n",
+    "# and thus for the two charging sites (Site 1: 95,5%, Site 2: 49,3%).\n",
     "\n",
-    "#Using our domain knowledge, it is reasonable to assume that the majority of consumers with access \n",
-    "#to a privately owned charging site visit it frequently. This is reinforced by the fact that the privately owned\n",
-    "#site is open to employees of a company. This is in contrast to a public charging site, \n",
-    "#for which we would expect a not insignificant amount of one-time consumers, making use of public charging sites\n",
-    "#on the go. Additionally, we have reason to assume that customers with access to a private charging site would\n",
-    "#likely have a registered account, as they frequent the site and thus could make use of the benefits that come\n",
-    "#with registering an account. Looking at the stark contrast of registered user share between the two sites, \n",
-    "#we can confidently assume that Site 1 is the privately owned one, while Site 2 is public.\n",
+    "# Using our domain knowledge, it is reasonable to assume that the majority of consumers with access \n",
+    "# to a privately owned charging site visit it frequently. This is reinforced by the fact that the privately owned\n",
+    "# site is open to employees of a company. This is in contrast to a public charging site, \n",
+    "# for which we would expect a not insignificant amount of one-time consumers, making use of public charging sites\n",
+    "# on the go. Additionally, we have reason to assume that customers with access to a private charging site would\n",
+    "# likely have a registered account, as they frequent the site and thus could make use of the benefits that come\n",
+    "# with registering an account. Looking at the stark contrast of registered user share between the two sites, \n",
+    "# we can confidently assume that Site 1 is the privately owned one, while Site 2 is public.\n",
     "\n",
-    "#Note for our assignment:\n",
-    "#Additional metrics would definitely be of benefit, \n",
-    "#but I think this one alone is pretty much all we need as the bare minimum "
+    "# Note for our assignment:\n",
+    "# Additional metrics would definitely be of benefit, \n",
+    "# but I think this one alone is pretty much all we need as the minimum "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "9191f808-c868-4e05-9e09-39ae80049da0",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2024, 1, 6, 8, 37, 9, 456648)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#tests for 2(a) - temporal and seasonal differences\n",
+    "\n",
+    "# Since the time values for all datatime objects are in UTC (GMT), we first have to correct the values. \n",
+    "# The timezone for Los Angeles is GMT-8, so we have to adjust all time values for every data entry by 8 hours.\n",
+    "\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "# As an example on how this can be done, let's take the current datetime (which is GMT+1 for us in Germany) and\n",
+    "# subtract 9 hours using timedelta. This will give us the current datetime for LA.\n",
+    "\n",
+    "current_time_LA = datetime.now() - timedelta(hours=9)\n",
+    "current_time_LA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "cd5ff1eb-8858-464d-9a06-9089415eb87c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "cs_test2 = cs_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "893b1ffb-810a-48b4-8ee1-7701fafeb5e5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'str' and 'datetime.timedelta'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#For testing purposes, let's try to apply this adjustment for a single data entry first.\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m#Upon running the code, we can notice that the time data is still stored as a String object. \u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m#We can use the datetime.strptime() method to convert String objects to datetime objects.\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m cs_test2\u001b[38;5;241m.\u001b[39mloc[\u001b[38;5;241m0\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconnectionTime\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m cs_test2\u001b[38;5;241m.\u001b[39mloc[\u001b[38;5;241m0\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconnectionTime\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m-\u001b[39m timedelta(hours\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m8\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'str' and 'datetime.timedelta'"
+     ]
+    }
+   ],
+   "source": [
+    "# For testing purposes, let's try to apply this adjustment for a single data entry first.\n",
+    "# Upon running the code, we can notice that the time data is still stored as a String object. \n",
+    "# We can use the datetime.strptime() method to convert String objects to datetime objects.\n",
+    "\n",
+    "cs_test2.loc[0, 'connectionTime'] = cs_test2.loc[0, 'connectionTime'] - timedelta(hours=8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "1370e6be-ba6f-422a-8a7e-d87e7d49b75c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2020, 1, 2, 13, 8, 54)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Here we apply the datetime.strptime() function for a single data entry:\n",
+    "\n",
+    "cs_test2.loc[0, 'connectionTime'] = datetime.strptime(cs_test2.loc[0, 'connectionTime'], \"%Y-%m-%d %H:%M:%S+00:00\")\n",
+    "\n",
+    "cs_test2.loc[0, 'connectionTime']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "id": "049dab0f-b9fd-45fe-89ab-180a89cd9407",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# We have successfully transformed this single data entry from String object to datatime object.\n",
+    "# Now we can do the same for all data entries in our cs_test2 dataframe.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c95eaa5a-5f6f-4adb-9ea1-bf4161fb95ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
